--- a/frontend/pages/invoices.html
+++ b/frontend/pages/invoices.html
@@ -23,14 +23,69 @@
 </head>
 
 <body data-page="invoices">
-    <div class="app-layout"><!-- Main Wrapper -->
-        <div class="main-wrapper"><!-- Main Content -->
+    <div class="app-layout">
+        <!-- Main Wrapper -->
+        <div class="main-wrapper">
+            <!-- Main Content -->
             <main class="main-content">
+                <!-- Page Header -->
+                <div class="page-header">
+                    <div>
+                        <h1 class="page-title">Faturalar</h1>
+                        <p class="page-subtitle">Yurtiçi ve ihracat faturalarını yönetin</p>
+                    </div>
+                    <div class="page-actions">
+                        <button class="btn btn-primary" onclick="openCreateModal()">
+                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                stroke-width="2">
+                                <line x1="12" y1="5" x2="12" y2="19"></line>
+                                <line x1="5" y1="12" x2="19" y2="12"></line>
+                            </svg>
+                            Yeni Fatura
+                        </button>
+                    </div>
+                </div>
 
-                <!-- ============================================= -->
-                <!-- BURAYA SAYFA İÇERİĞİ GELİR -->
-                <!-- ============================================= -->
+                <!-- Filters Card -->
+                <div class="content-card" style="margin-bottom: var(--spacing-lg);">
+                    <div class="content-card-body" style="padding: var(--spacing-md);">
+                        <div class="form-inline">
+                            <div class="form-group" style="flex: 1; max-width: 300px;">
+                                <input type="text" class="form-input" id="search-input"
+                                    placeholder="Fatura numarası ara...">
+                            </div>
+                            <div class="form-group">
+                                <select class="form-select" id="type-filter">
+                                    <option value="">Tüm Tipler</option>
+                                    <option value="DOMESTIC">Yurtiçi</option>
+                                    <option value="EXPORT">İhracat</option>
+                                </select>
+                            </div>
+                            <div class="form-group">
+                                <select class="form-select" id="status-filter">
+                                    <option value="">Tüm Durumlar</option>
+                                    <option value="DRAFT">Taslak</option>
+                                    <option value="SENT">Gönderildi</option>
+                                    <option value="PAID">Ödendi</option>
+                                    <option value="CANCELLED">İptal</option>
+                                </select>
+                            </div>
+                            <button class="btn btn-outline" onclick="loadInvoices()">Filtrele</button>
+                        </div>
+                    </div>
+                </div>
 
+                <!-- Data Table Card -->
+                <div class="content-card">
+                    <div class="content-card-body" style="padding: 0;">
+                        <div class="data-table-wrapper" id="table-container">
+                            <div class="empty-state">
+                                <div class="empty-state-icon">⏳</div>
+                                <div class="empty-state-title">Yükleniyor...</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </main>
         </div>
     </div>
