--- a/frontend/pages/reports.html
+++ b/frontend/pages/reports.html
@@ -23,14 +23,66 @@
 </head>
 
 <body data-page="reports">
-    <div class="app-layout"><!-- Main Wrapper -->
-        <div class="main-wrapper"><!-- Main Content -->
+    <div class="app-layout">
+        <!-- Main Wrapper -->
+        <div class="main-wrapper">
+            <!-- Main Content -->
             <main class="main-content">
+                <!-- Page Header -->
+                <div class="page-header">
+                    <div>
+                        <h1 class="page-title">Raporlar</h1>
+                        <p class="page-subtitle">İş zekası ve analiz raporları</p>
+                    </div>
+                </div>
 
-                <!-- ============================================= -->
-                <!-- BURAYA SAYFA İÇERİĞİ GELİR -->
-                <!-- ============================================= -->
+                <!-- Summary Stats -->
+                <div class="stats-grid" id="summary-stats" style="margin-bottom: var(--spacing-lg);">
+                    <!-- Will be populated by JS -->
+                </div>
 
+                <!-- Report Cards -->
+                <div class="cards-grid" id="report-cards">
+                    <!-- Stock Status -->
+                    <div class="content-card">
+                        <div class="content-card-header">
+                            <h3>📦 Stok Durumu</h3>
+                        </div>
+                        <div class="content-card-body" id="stock-report">
+                            <div class="empty-state-icon">⏳</div>
+                        </div>
+                    </div>
+
+                    <!-- Expense Summary -->
+                    <div class="content-card">
+                        <div class="content-card-header">
+                            <h3>💳 Masraf Özeti</h3>
+                        </div>
+                        <div class="content-card-body" id="expense-report">
+                            <div class="empty-state-icon">⏳</div>
+                        </div>
+                    </div>
+
+                    <!-- Revenue Summary -->
+                    <div class="content-card">
+                        <div class="content-card-header">
+                            <h3>💰 Gelir Özeti</h3>
+                        </div>
+                        <div class="content-card-body" id="revenue-report">
+                            <div class="empty-state-icon">⏳</div>
+                        </div>
+                    </div>
+
+                    <!-- Currency Rates -->
+                    <div class="content-card">
+                        <div class="content-card-header">
+                            <h3>💱 Döviz Kurları</h3>
+                        </div>
+                        <div class="content-card-body" id="currency-report">
+                            <div class="empty-state-icon">⏳</div>
+                        </div>
+                    </div>
+                </div>
             </main>
         </div>
     </div>
