--- a/frontend/pages/service-forms.html
+++ b/frontend/pages/service-forms.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Servis Formu - Otomasyon CRM</title>
+    <title>Servis Formları - Otomasyon CRM</title>
 
     <!-- CSS Files -->
     <link rel="icon" href="../favicon.ico" type="image/x-icon">
@@ -23,14 +23,61 @@
 </head>
 
 <body data-page="service-forms">
-    <div class="app-layout"><!-- Main Wrapper -->
-        <div class="main-wrapper"><!-- Main Content -->
+    <div class="app-layout">
+        <!-- Main Wrapper -->
+        <div class="main-wrapper">
+            <!-- Main Content -->
             <main class="main-content">
+                <!-- Page Header -->
+                <div class="page-header">
+                    <div>
+                        <h1 class="page-title">Servis Formları</h1>
+                        <p class="page-subtitle">Saha servis işlemlerini ve çalışma raporlarını yönetin</p>
+                    </div>
+                    <div class="page-actions">
+                        <button class="btn btn-primary" onclick="openCreateModal()">
+                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                stroke-width="2">
+                                <line x1="12" y1="5" x2="12" y2="19"></line>
+                                <line x1="5" y1="12" x2="19" y2="12"></line>
+                            </svg>
+                            Yeni Servis Formu
+                        </button>
+                    </div>
+                </div>
 
-                <!-- ============================================= -->
-                <!-- BURAYA SAYFA İÇERİĞİ GELİR -->
-                <!-- ============================================= -->
+                <!-- Filters Card -->
+                <div class="content-card" style="margin-bottom: var(--spacing-lg);">
+                    <div class="content-card-body" style="padding: var(--spacing-md);">
+                        <div class="form-inline">
+                            <div class="form-group" style="flex: 1; max-width: 300px;">
+                                <input type="text" class="form-input" id="search-input"
+                                    placeholder="Form numarası ara...">
+                            </div>
+                            <div class="form-group">
+                                <select class="form-select" id="status-filter">
+                                    <option value="">Tüm Durumlar</option>
+                                    <option value="DRAFT">Taslak</option>
+                                    <option value="IN_PROGRESS">Devam Ediyor</option>
+                                    <option value="COMPLETED">Tamamlandı</option>
+                                </select>
+                            </div>
+                            <button class="btn btn-outline" onclick="loadServiceForms()">Filtrele</button>
+                        </div>
+                    </div>
+                </div>
 
+                <!-- Data Table Card -->
+                <div class="content-card">
+                    <div class="content-card-body" style="padding: 0;">
+                        <div class="data-table-wrapper" id="table-container">
+                            <div class="empty-state">
+                                <div class="empty-state-icon">⏳</div>
+                                <div class="empty-state-title">Yükleniyor...</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </main>
         </div>
     </div>
